fix: link before build

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,11 +22,8 @@ jobs:
       - name: Install lowdown
         run: sudo apt-get install -y lowdown
 
-      - name: Prepare dist
-        run: mkdir -p artnoi.com/dist
-
       - name: Build
-        run: yes | ./genhtml.sh
+        run: yes | ./linkweb.sh artnoi && yes | ./genhtml.sh
         
       - name: Deploy
         uses: peaceiris/actions-gh-pages@364c31d33bb99327c77b3a5438a83a357a6729ad # v3.4.0
