--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ bin/*
 !bin/ssg
 
 artnoi.com/dist/*
+artnoi.com/src/_header.html
+artnoi.com/src/_footer.html
 
 # These files are linked by linkweb.sh
 dist
