--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
         run: sudo apt-get install -y lowdown
 
       - name: Build
-        run: yes | ./linkweb.sh artnoi && yes | ./genhtml.sh
+        run: yes | ./linkweb.sh artnoi.com && yes | ./genhtml.sh artnoi.com
         
       - name: Deploy
         uses: peaceiris/actions-gh-pages@364c31d33bb99327c77b3a5438a83a357a6729ad # v3.4.0
