--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,9 @@ jobs:
       - name: Install lowdown
         run: sudo apt-get install -y lowdown
 
+      - name: Prepare dist
+        run: mkdir -p artnoi.com/dist/fonts
+
       - name: Build
         run: yes | ./linkweb.sh artnoi.com && yes | ./genhtml.sh artnoi.com
         
