feat: add CNAME file to static site branch

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,10 @@ jobs:
 
       - name: Build
         run: yes | ./linkweb.sh artnoi.com && yes | ./genhtml.sh artnoi.com
+
+      # Prepare CNAME for GitHub Pages with custom domain
+      - name: CNAME
+        run: echo "artnoi.com" > artnoi.com/dist/CNAME
         
       - name: Deploy
         uses: peaceiris/actions-gh-pages@364c31d33bb99327c77b3a5438a83a357a6729ad # v3.4.0
