chore: use github actions template

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,35 +7,13 @@ on:
 
 jobs:
   build:
-    name: Build static sites
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
-
-      - name: Install python dependencies
-        run: pip install htmlmin
-
-      - name: Install lowdown
-        run: sudo apt-get install -y lowdown
-
-      - name: Prepare dist
-        run: mkdir -p artnoi.com/dist/fonts
-
-      - name: Build
-        run: yes | ./linkweb.sh artnoi.com && yes | ./genhtml.sh artnoi.com
-
-      # Prepare CNAME for GitHub Pages with custom domain
-      - name: CNAME
-        run: echo "artnoi.com" > artnoi.com/dist/CNAME
-        
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@364c31d33bb99327c77b3a5438a83a357a6729ad # v3.4.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: publish/artnoi.com
-          publish_dir: artnoi.com/dist
-          force_orphan: true
+    name: Build GitHub Pages
+    uses: ./github/workflows/pages.yaml
+    with:
+      sitekey: artnoi.com
+      mkdir: ./artnoi.com/dist/fonts
+      dist: ./artnoi.com/dist
+      deploy_branch: publish/artnoi.com
+      wipe_deploy_branch: true
+      cname: artnoi.com
+    
