--- a/manifest.json
+++ b/manifest.json
@@ -1,53 +1,39 @@
 {
-	"cleanup": {
-		"toRemove": [
-			".DS_Store",
-			"lost+found",
-			".files"
-		],
-		"noRemove": [
-			".stversions"
-		]
-	},
-	"servers": [
-		{
-			"hostname": "wbsd",
-			"scpPath": "wbsd:~/web/."
-		}
-	],
-	"sites": [
-		{
-			"sitekey": "jd.com",
-			"name": "JohnDoe.com",
-			"url": "https://johndoe.com",
-			"src": "johndoe.com/src",
-			"resource": "johndoe.com/resc",
-			"dist": "johndoe.com/dist",
-			"links": {
-				"shared/fonts": "johndoe.com/dist/fonts",
-				"johndoe.com/resc/_header.html": "johndoe.com/src/_header.html",
-				"johndoe.com/resc/_footer.html": "johndoe.com/src/_footer.html",
-				"johndoe.com/resc/style.css": "johndoe.com/dist/style.css",
-				"johndoe.com/resc/script.js": "johndoe.com/dist/script.js",
-				"johndoe.com/resc/logo.svg": "johndoe.com/dist/logo.svg"
-			}
-		},
-		{
-			"sitekey": "artnoi.com",
-			"name": "Artnoi.com",
-			"url": "https://artnoi.com",
-			"src": "artnoi.com/src",
-			"dist": "artnoi.com/dist",
-			"resource": "artnoi.com/resc",
-			"links": {
-				"shared/fonts": "artnoi.com/dist/fonts",
-				"artnoi.com/resc/_header.html": "artnoi.com/src/_header.html",
-				"artnoi.com/resc/_footer.html": "artnoi.com/src/_footer.html",
-				"artnoi.com/resc/style-minimal.css": "artnoi.com/dist/style.css",
-				"artnoi.com/resc/script.js": "artnoi.com/dist/script.js",
-				"artnoi.com/resc/logo.svg": "artnoi.com/dist/logo.svg",
-				"artnoi.com/resc/openbsd.png": "artnoi.com/dist/toplogo.png"
+	"artnoi.com": {
+		"name": "Artnoi.com",
+		"url": "https://artnoi.com",
+		"src": "artnoi.com/src",
+		"dst": "artnoi.com/dist",
+		"cleanup": true,
+		"copies": {
+			"./artnoi.com/resc/_header.html": {
+				"force": true,
+				"target": "./artnoi.com/src/_header.html"
+			},
+			"./artnoi.com/resc/_footer.html": {
+				"force": true,
+				"target": "./artnoi.com/src/_footer.html"
+			},
+			"./artnoi.com/resc/fonts": {
+				"force": true,
+				"target": "./artnoi.com/dist/fonts"
+			},
+			"./artnoi.com/resc/style.css": {
+				"force": true,
+				"target": "./artnoi.com/dist/style.css"
+			},
+			"./artnoi.com/resc/script.js": {
+				"force": true,
+				"target": "artnoi.com/dist/script.js"
+			},
+			"./artnoi.com/resc/logo.svg": {
+				"force": true,
+				"target": "artnoi.com/dist/logo.svg"
+			},
+			"./artnoi.com/resc/openbsd.png": {
+				"force": true,
+				"target": "artnoi.com/dist/toplogo.png"
 			}
 		}
-	]
+	}
 }
