--- a/.github/workflows/ssg-pages.yaml
+++ b/.github/workflows/ssg-pages.yaml
@@ -1,7 +1,7 @@
 name: ssg-pages
 
 on:
-  workflow_call:
+  workflow_call: &runinputs
     inputs:
       ssg-go-ref:
         type: string
@@ -31,6 +31,8 @@ on:
       cname:
         type: string
         required: false
+
+    workflow_dispatch: *runinputs
 
 jobs:
   build:
