--- a/.github/workflows/ssg-pages.yaml
+++ b/.github/workflows/ssg-pages.yaml
@@ -1,12 +1,12 @@
 name: ssg-pages
 
 on:
-  workflow_dispatch: 
+  workflow_dispatch:
     inputs:
       ssg-go-ref:
         type: string
         required: false
-        default: dev
+        default: master
         description: "Git SHA1 or refs to pull and build soyweb from"
 
       dist:
@@ -64,7 +64,6 @@ on:
       cname:
         type: string
         required: false
-
 
 jobs:
   build:
@@ -135,4 +134,4 @@ jobs:
     uses: ./.github/workflows/deploy_branch.yaml
     with:
       branch_name: ${{ inputs.deploy_branch }}
-      path: '.'
+      path: "."
