--- a/.github/workflows/ssg-pages.yaml
+++ b/.github/workflows/ssg-pages.yaml
@@ -88,7 +88,7 @@ jobs:
           echo "[ssg-pages] Inspecting $(pwd) before building ssg-go with nix"
           tree .
 
-          nix build "github:soyart/soyweb?ref=${{ inputs.ssg-go-ref }}#default"
+          nix build "github:soyart/soyweb?ref=${{ inputs.ssg-go-ref }}"
           echo "[ssg-pages] Inspecting built soyweb"
           tree .
 
